--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,8 +14,25 @@
   }
 }
 
-body {
+/* body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+} */
+
+
+/* Custom Styling */
+body {
+  @apply bg-gray-900 text-white;
+  font-family: "Inter", sans-serif;
+}
+
+/* Section Styling */
+section {
+  @apply py-16 px-6 max-w-7xl mx-auto;
+}
+
+/* Heading */
+h2, h3 {
+  @apply text-white font-bold text-center;
 }
